# celeritas

./: .clang-format  CMakeLists.txt  README.md
bat/: compile.sh
cmake/auth_server/: CMakeLists.txt
cmake/chat_server/: CMakeLists.txt
cmake/common/: CMakeLists.txt
cmake/database/: CMakeLists.txt
cmake/game_server/: CMakeLists.txt
cmake/network/: CMakeLists.txt
cmake/worker_pool/: CMakeLists.txt
include/proto/common/: Common.pb.h
proto/common/: Common.proto  common.proto
src/auth_server/: CMakeLists.txt
src/chat_server/: CMakeLists.txt  main.cpp
src/common/: buffer_guard.cpp  buffer_guard.h  buffer_pool.cpp  buffer_pool.h  buffer_pool_data.cpp  buffer_pool_data.h  celeritas_error.cpp  celeritas_error.h  common_fwd.h  logger.cpp  logger.h
src/common/detail/: buffer_pool_bucket.cpp  buffer_pool_bucket.h  buffer_pool_impl.cpp  buffer_pool_impl.h  common_internal_fwd.h  logger_impl.cpp  logger_impl.h
src/database/: database_fwd.h  mysql_database_pool.cpp  mysql_database_pool.h  mysql_database_session.cpp  mysql_database_session.h
src/game_server/: CMakeLists.txt
src/network/: ipc_manager.cpp  ipc_manager.h  ipc_session.cpp  ipc_session.h  listener.cpp  listener.h  message_header.cpp  message_header.h  network_fwd.h  session.cpp  session.h  session_base.h  session_base.tpp  tcp_client.cpp  tcp_client.h  tcp_listener.cpp  tcp_listener.h
src/network/detail/: network_internal_fwd.h
src/proto/: proto_buf_pragma_warning.inl
src/proto/common/: Common.pb.cc  Common.pb.h1  common.pb.cc  common.pb.h
src/worker_pool/: thread_safe_queue.cpp  thread_safe_queue.h  worker_pool.cpp  worker_pool.h  worker_pool_fwd.h
